# py-poetry-pre-commit-template

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
