[tool.isort]
profile = "black"
known_first_party = "poetry"

[tool.poetry]
name = "py-poetry-pre-commit-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "py_poetry_pre_commit_template"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
ipykernel = "^6.16.1"
numpy = "^1.23.4"
pandas = "^1.5.1"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.10.0"}
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
